// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-imWZod kWDnYb aje-select aje-select--default is-medium"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        Custom dropdown label
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="opt1"
          >
            Item 1
          </option>
          <option
            value="opt2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <label
      class="sc-kpDprT jfpflK aje-label is-auto"
      id="react-aria-:r3:"
    >
      Custom dropdown label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-iGgVNO sc-gsFSjX gITxVe aje-btn sc-kAycRU bPlNWz aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      role="link"
      tabindex="0"
      type="button"
    >
      <span
        class="sc-dhKdPU ebBQqz"
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
        class="sc-eDPFhE cPIjzF material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-imWZod kWDnYb aje-select aje-select--floating is-medium"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        Custom dropdown label
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="opt1"
          >
            Item 1
          </option>
          <option
            value="opt2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <div
      class="sc-fPXMhL khXgbG"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-iGgVNO sc-gsFSjX gITxVe aje-btn sc-kAycRU bPlNWz aje-btn--dropdown is-medium"
        id="react-aria-:ra:"
        role="link"
        tabindex="0"
        type="button"
      >
        <span
          class="sc-dhKdPU ebBQqz"
          id="react-aria-:rf:"
        />
        <i
          aria-hidden="true"
          class="sc-eDPFhE cPIjzF material-icons is-medium"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-kpDprT jfpflK aje-label is-auto"
        id="react-aria-:rb:"
      >
        Custom dropdown label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
